--- a/documents/api接口文档/个人业务模块.md
+++ b/documents/api接口文档/个人业务模块.md
@@ -2,7 +2,7 @@
 
 下面是关于个人业务模块的接口文档
 
-## POST /api/user
+## POST /api/personal/user
 
 **用户注册**
 
@@ -42,7 +42,7 @@
 }
 ```
 
-## POST /api/login
+## POST /api/personal/login
 
 **用户登录**
 
@@ -77,7 +77,7 @@
 }
 ```
 
-## GET /api/info
+## GET /api/personal/info
 
 **个人信息**
 
@@ -111,7 +111,7 @@
 }
 ```
 
-## GET /api/wallet
+## GET /api/personal/wallet
 
 **我的钱包**
 
@@ -143,7 +143,7 @@
 }
 ```
 
-## POST /api/mobile
+## POST /api/personal/mobile
 
 通过手机号获取用户信息
 
@@ -164,7 +164,7 @@
 }
 ```
 
-## POST /api/pay
+## POST /api/personal/pay
 
 这个api承接所有的支付项目，通过mode选择，这里举例
 
