--- a/documents/api接口文档/管理功能模块.md
+++ b/documents/api接口文档/管理功能模块.md
@@ -75,6 +75,8 @@
 }
 ```
 
+## POST /api/admincheck
+
 **查看用户信息**
 
 ### request
@@ -117,6 +119,8 @@
 }
 ```
 
+## POST /api/adminlost
+
 **用户挂失**
 
 ### request
@@ -144,6 +148,8 @@
 }
 ```
 
+## POST /api/adminchange
+
 **修改用户信息**
 
 ### request
@@ -170,6 +176,8 @@
 	]
 }
 ```
+
+## POST /api/adminfreeze
 
 **冻结账户**
 
