--- a/documents/api接口文档/管理功能模块.md
+++ b/documents/api接口文档/管理功能模块.md
@@ -119,9 +119,11 @@
 }
 ```
 
-## POST /api/adminlost（验证）  /api/resetpasswor（重新设置密码）
+## POST /api/adminlost（验证）  /api/resetpassword（重新设置密码）
 
 **用户挂失**
+
+### 验证部分
 
 ### request
 
@@ -147,6 +149,47 @@
 	]
 }
 ```
+
+
+
+### 重新设置部分
+
+### request
+
+```
+{
+	 "username":"用户名"
+   "password":"重新设置的密码"
+}
+```
+
+### response
+
+#### 成功
+
+```
+{
+    "success":true,
+    "error":"",
+    "data": null
+}
+```
+
+#### 失败
+
+```
+{
+    "success":falus,
+    "error":"新设置的密码不能为空",
+    "data": null
+}
+```
+
+#### 
+
+
+
+
 
 ## POST /api/adminchange
 
