--- a/documents/api接口文档/管理功能模块.md
+++ b/documents/api接口文档/管理功能模块.md
@@ -191,9 +191,11 @@
 
 
 
-## POST /api/adminchange
+## POST /api/adminchangecheck（验证） /api/adminchange（修改）
 
 **修改用户信息**
+
+#### check（用户验证）
 
 ### request
 
@@ -210,15 +212,36 @@
 {
     "success":true,
     "error":"",
-    "data":[
-		{
-			"password":"修改用户密码",
-			"email":"修改用户绑定的邮箱",
-			"mobile":"修改用户绑定的手机号"
-		}
-	]
+    "data":null
 }
 ```
+
+#### change（修改信息）
+
+### request
+
+```
+{
+			"name":"用户名"
+    	"password":"修改用户密码",
+			"email":"修改用户绑定的邮箱",
+			"mobile":"修改用户绑定的手机号"
+}
+```
+
+### response
+
+```
+{
+    "success":true,
+    "error":"",
+    "data":null
+}
+```
+
+
+
+
 
 ## POST /api/adminfreeze
 
