update the daily

--- a/documents/api接口文档/公司业务模块.md
+++ b/documents/api接口文档/公司业务模块.md
@@ -84,8 +84,7 @@
 
 ```
 {
-    "name":"公司名称"
-    "address":"公司所在地"
+    "ID":"所需注册的普通卡证书卡号"
 }
 ```
 
@@ -97,17 +96,20 @@
 {
     "success":true,
     "error":"",
-    "data":[
+    "data":
         {
             "total_assets":"总资产",
             "money_management":"理财产品",
-            "loan"："贷款业务"
+            "loan"："贷款业务","name":"公司名称",
+            "name":"公司名称",
+            "address":"公司所在地",
+            "number":"企业指定的普通卡证书持卡人的证件号码"
         }
     ]
 }
 ```
 
-## GET /api/info
+## GET /api/bill
 
 获取账单信息
 
