Realize company payment function and Perfect registration &login function

--- a/documents/api接口文档/公司业务模块.md
+++ b/documents/api接口文档/公司业务模块.md
@@ -100,7 +100,7 @@
         {
             "total_assets":"总资产",
             "money_management":"理财产品",
-            "loan"："贷款业务","name":"公司名称",
+            "loan"："贷款业务",
             "name":"公司名称",
             "address":"公司所在地",
             "number":"企业指定的普通卡证书持卡人的证件号码"
@@ -145,6 +145,7 @@
 {
     "money":"缴费金额",
     "detail":"描述",
+    "payer":"付款方",
     "payee":"收款方",
     "password":"支付密码"
 }
